generate server - with events
