# gendocs/controllers/InvestmentService.js
@@ -81,6 +81,9 @@ exports.getInvestmentAudit = function(args, res, next) {
    **/
   var examples = {};
   examples['application/json'] = {
+  "next" : "https://api/collection/id/audit?offset=400&limit=100",
+  "previous" : "https://api/collection/id/audit?offset=200&limit=100",
+  "count" : 99,
   "results" : [ {
     "changes" : {
       "key" : [ "John" ]
